--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
-/*
+/* Cassette Plugin Styles */
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+/* MAL User Avatar */
+.cassette-user-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-left: 8px;
+}
 
-If your plugin does not need CSS, delete this file.
+/* Credential Info Section */
+.cassette-credential-info {
+  border-top: 1px solid var(--background-modifier-border);
+  padding-top: 1em;
+  margin-top: 1em;
+}
 
-*/
+/* Sign Out Button */
+.cassette-signout-button {
+  background-color: var(--interactive-accent);
+}
