--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-decoration: none;
 }
 
 .cassette-user-name:hover {
