--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,9 @@
   border: none !important;
   box-shadow: none !important;
   padding: 2px !important;
+  font-size: 1.1em;
+  font-weight: 500;
+  text-decoration: none;
 }
 
 .cassette-logout-button:hover {
